--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -226,3 +226,12 @@ footer a {
 .clearfix {display: inline-block;}
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
+
+
+
+/* Custom */
+img {
+  margin-left:auto;
+  margin-right:auto;
+  width:40%;
+}
