--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,11 @@
 ---
 
 @import "jekyll-theme-tactile";
+
+/* Custom */
+img {
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width:40%;
+}
