--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,9 +4,9 @@
 @import "jekyll-theme-tactile";
 
 /* Custom */
-img {
+img, img + em{
     display:block;
     margin-left:auto;
     margin-right:auto;
-    width:80%;
+    width:100%;
 }
