--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,5 +8,6 @@ img, img + em{
     display:block;
     margin-left:auto;
     margin-right:auto;
-    width:100%;
+    text-align: center;
+    width:80%;
 }
