--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,14 @@
 @import "jekyll-theme-tactile";
 
 /* Custom */
-img, img + em{
+img {
     display:block;
     margin-left:auto;
     margin-right:auto;
-    text-align: center;
     width:80%;
+}
+
+.caption {
+    text-align: center;
+    font-size: .8rem;
 }
