--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,14 +4,12 @@
 @import "jekyll-theme-tactile";
 
 /* Custom */
-img {
+img, img + em {
     display:block;
     margin-left:auto;
     margin-right:auto;
     width:80%;
-}
 
-.caption {
     text-align: center;
-    font-size: .8rem;
+    font-size: 0.8rem;
 }
