--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <div class="inner">
 
         <header>
-          <h1>Diffraction in Graphics</h1>
+          <h1>Diffraction</h1>
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         </header>
         <hr>
