--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-{% seo %}
+    <title>{{ page.title }}</title>
   </head>
 
   <body>
